# alphasignal-market-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/src/alphasignal_api/: __init__.py  main.py
apps/api/src/alphasignal_api/routes/: backtests.py  health.py  market.py  portfolio.py  sentiment.py  signals.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md  interview-talking-points.md  roadmap.md
infra/sql/: 001_init.sql
services/backtest/src/alphasignal_backtest/: __init__.py  engine.py  events.py  metrics.py  portfolio.py  strategies.py
services/features/src/alphasignal_features/: __init__.py  technical.py
services/ingest/src/alphasignal_ingest/: __init__.py  flows.py  repository.py  universe.py
services/ingest/src/alphasignal_ingest/providers/: __init__.py  fred.py  yahoo.py
services/ml/src/alphasignal_ml/: __init__.py  baseline.py  labels.py  metrics.py  portfolio.py
services/sentiment/src/alphasignal_sentiment/: __init__.py  finbert.py  scoring.py
tests/: test_api.py  test_backtest_engine.py  test_backtest_metrics.py  test_database.py  test_event_backtester.py  test_finbert_facade.py  test_ingest_flow.py  test_ingest_providers.py  test_ml_baseline.py  test_ml_metrics.py  test_portfolio.py  test_sentiment_scoring.py  test_shared_schemas.py  test_technical_features.py
