[project]
name = "alphasignal"
version = "0.1.0"
description = "Algorithmic trading intelligence platform with market data, sentiment, ML signals, and backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "yfinance>=0.2.40",
    "prefect>=3.0.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.15.0",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "apps/api/src",
    "packages/shared/src",
    "services/backtest/src",
    "services/features/src",
    "services/ingest/src",
    "services/ml/src",
    "services/sentiment/src",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pandas-stubs>=2.2.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
ml = [
    "lightgbm>=4.5.0",
    "shap>=0.46.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
mypy_path = [
    "apps/api/src",
    "packages/shared/src",
    "services/backtest/src",
    "services/features/src",
    "services/ingest/src",
    "services/ml/src",
    "services/sentiment/src",
]
files = [
    "apps/api/src",
    "packages/shared/src",
    "services/backtest/src",
    "services/features/src",
    "services/ingest/src",
    "services/ml/src",
    "services/sentiment/src",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [
    "apps/api/src",
    "packages/shared/src",
    "services/backtest/src",
    "services/features/src",
    "services/ingest/src",
    "services/ml/src",
    "services/sentiment/src",
]
